# magpy

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
notebooks/: ADIALabTutorial1.ipynb  astar.ipynb  diabetes.ipynb  sf.ipynb  tutorial.ipynb
notebooks/intro_to_causal_discovery/: 1_conditional_independence.ipynb  2_deadly_sins.ipynb  3_causal_discovery.ipynb
src/magpy/: __init__.py
src/magpy/estimation/: categorical.py  double.py  effects.py
src/magpy/logger/: base.py
src/magpy/oracles/: kernel.py  mixed.py  oracles.py
src/magpy/search/: astar.py  orientation.py  pcskeleton.py
src/magpy/utils/: DataManager.py
tests/: test_astar.py
