[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magpy"
version = "0.1.0"
description = "A package for causal discovery and causal inference algorithms"
authors = [{name = "Andre", email = "andre@ergodic.ai"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib==1.4.2",
    "networkx==3.3",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "pydantic==2.9.2",
    "scikit-learn==1.5.2",
    "pytest==8.3.3",
    "matplotlib==3.9.2",
    "tqdm==4.66.5",
    "causal-learn==0.1.3.8",
]

[project.urls]
Homepage = "https://github.com/ergodic-ai/magpy"