[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-magpy"
version = "0.1.0"
description = "A package for causal discovery and causal inference algorithms"
authors = [{name = "Andre", email = "andre@ergodic.ai"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib",
    "networkx",
    "numpy",
    "pandas",
    "pydantic",
    "scikit-learn",
    "pytest",
    "matplotlib",
    "tqdm",
    "causal-learn",
    "causalml",
]


[project.urls]
Homepage = "https://github.com/ergodic-ai/magpy"